--- a/UnitTests/UnitTest3/config.ini
+++ b/UnitTests/UnitTest3/config.ini
@@ -5,3 +5,16 @@ action_layer_path = .\UnitTests\UnitTest3\Media\super_mario_world_Main Layer.csv
 tiles_path = .\UnitTests\UnitTest3\Media\super_mario_tiles.png
 solid_tiles_path = .\UnitTests\UnitTest3\Media\solid_tiles.txt
 characters_path = .\UnitTests\UnitTest3\Media\characters.png
+
+[tiles]
+
+solid = 0 1 2 3 41 42 48 50 60 61 76 77 78 79 80 81 82 83 95 96 97 98 99 100 101 102 114 115 116 117 118 119 120 121 133 134 135 136 137 138 139 140 152 153 154 155 156 157 171 172 173 174 175 176
+
+[Mario_small]
+
+stand_right = 126 60
+stand_left = 98 60
+walk_right = 214 35,243 35,275 35,243 35
+walk_left = 69 60,40 60,7 60,40 60
+jump_right = 245 60,275 60
+jump_left = 217 60,187 60
