--- a/UnitTests/UnitTest3/config.ini
+++ b/UnitTests/UnitTest3/config.ini
@@ -22,4 +22,6 @@ jump_left = 217 60 16 16,217 60 16 16,217 60 16 16,217 60 16 16,217 60 16 16,217
 [pipes]
 
 pipe_up = 48 32 32 32
+pipe_left = 80 64 32 32
+pipe_right = 16 64 32 32
 pipe_locations = u416 416
