Create basic pipe teleport

--- a/UnitTests/UnitTest3/config.ini
+++ b/UnitTests/UnitTest3/config.ini
@@ -24,4 +24,4 @@ jump_left = 217 60 16 16,217 60 16 16,217 60 16 16,217 60 16 16,217 60 16 16,217
 pipe_up = 48 32 32 32
 pipe_left = 80 64 32 32
 pipe_right = 16 64 32 32
-pipe_locations = u416 416
+pipe_locations = u416 416 400 400
