Mario pipe transfer!

--- a/UnitTests/UnitTest3/config.ini
+++ b/UnitTests/UnitTest3/config.ini
@@ -24,4 +24,6 @@ jump_left = 217 60 16 16,217 60 16 16,217 60 16 16,217 60 16 16,217 60 16 16,217
 pipe_up = 48 32 32 32
 pipe_left = 80 64 32 32
 pipe_right = 16 64 32 32
-pipe_locations = u416 416 400 400
+; Pipe locations: u/d/l/r, position of pipe, new screen location, new mario location. f.e u416 416 600 0 50 50
+; position of map and screen location is relative to the map. The mario location is relative to the screen!
+pipe_locations = u416 416 4160 0 24 16,l4720 416 200 0 24 16
