Made goomba characters

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -27,3 +27,8 @@ pipe_right = 16 64 32 32
 ; Pipe locations: u/d/l/r, position of pipe, new screen location, new mario location. f.e u416 416 600 0 50 50
 ; position of map and screen location is relative to the map. The mario location is relative to the screen!
 pipe_locations = u416 416 4160 0 24 16,l4720 416 200 0 24 16
+
+[enemies]
+
+goomba = 8 385 16 16
+goomba_smashed = 182 390 16 10
