Goomba movement animation and fix onDestroy bugs

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -30,5 +30,5 @@ pipe_locations = u416 416 4160 0 24 16,l4720 416 200 0 24 16
 
 [enemies]
 
-goomba = 8 385 16 16
+goomba = 8 385 16 16,38 385 16 16
 goomba_smashed = 182 390 16 10
