made demo koopa troopa

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -32,3 +32,6 @@ pipe_locations = u416 416 4160 0 24 16,l4720 416 200 0 24 16
 
 goomba = 8 385 16 16,38 385 16 16
 goomba_smashed = 182 390 16 10
+green_koopa_troopa_right = 179 419 16 16,209 419 16 16
+green_koopa_troopa_left = 241 450 16 16,212 450 16 16
+green_koopa_troopa_shell = 213 474 16 10
