--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -1,10 +1,10 @@
 [paths]
 
-circular_backround_path = .\UnitTests\UnitTest3\Media\super_mario_world_circularBackground.csv
-action_layer_path = .\UnitTests\UnitTest3\Media\super_mario_world_Main Layer.csv
-tiles_path = .\UnitTests\UnitTest3\Media\super_mario_tiles.png
-solid_tiles_path = .\UnitTests\UnitTest3\Media\solid_tiles.txt
-characters_path = .\UnitTests\UnitTest3\Media\characters.png
+circular_backround_path = .\Engine\Media\super_mario_world_circularBackground.csv
+action_layer_path = .\Engine\Media\super_mario_world_Main Layer.csv
+tiles_path = .\Engine\Media\super_mario_tiles.png
+solid_tiles_path = .\Engine\Media\solid_tiles.txt
+characters_path = .\Engine\Media\characters.png
 
 [tiles]
 
