Started red coopa troopa

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -35,3 +35,6 @@ goomba_smashed = 182 390 16 10
 green_koopa_troopa_right = 179 419 16 16,209 419 16 16
 green_koopa_troopa_left = 241 450 16 16,212 450 16 16
 green_koopa_troopa_shell = 213 474 16 10
+red_koopa_troopa_right = 179 419 16 16,209 419 16 16
+red_koopa_troopa_left = 241 450 16 16,212 450 16 16
+red_koopa_troopa_shell = 213 474 16 10
