--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -38,3 +38,9 @@ green_koopa_troopa_shell = 213 474 16 10
 red_koopa_troopa_right = 179 419 16 16,209 419 16 16
 red_koopa_troopa_left = 241 450 16 16,212 450 16 16
 red_koopa_troopa_shell = 213 474 16 10
+
+[emenies_positions]
+
+goomba = 500 400
+green_koopa_troopa = 700 400
+red_koopa_troopa = 360 368
