--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -5,10 +5,12 @@ action_layer_path = .\Engine\Media\super_mario_world_Main Layer.csv
 tiles_path = .\Engine\Media\super_mario_tiles.png
 solid_tiles_path = .\Engine\Media\solid_tiles.txt
 characters_path = .\Engine\Media\characters.png
+npcs_path = .\Engine\Media\super_mario_sprite_sheet.png
 
 [tiles]
 
 solid = 0 1 2 3 41 42 48 50 60 61 76 77 78 79 80 81 82 83 95 96 97 98 99 100 101 102 114 115 116 117 118 119 120 121 133 134 135 136 137 138 139 140 152 153 154 155 156 157 171 172 173 174 175 176
+npcs = 0 1 2 26 27 28 43 44 45
 
 [Mario_small]
 
