--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -2,7 +2,7 @@
 
 circular_backround_path = .\Engine\Media\super_mario_world_circularBackground.csv
 action_layer_path = .\Engine\Media\super_mario_world_Main Layer.csv
-tiles_path = .\Engine\Media\super_mario_tiles.png
+tiles_path = .\Engine\Media\super_mario_sprite_sheet.png
 solid_tiles_path = .\Engine\Media\solid_tiles.txt
 characters_path = .\Engine\Media\characters.png
 npcs_path = .\Engine\Media\super_mario_sprite_sheet.png
