--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -9,7 +9,7 @@ npcs_path = .\Engine\Media\super_mario_sprite_sheet.png
 
 [tiles]
 
-solid = 0 1 2 3 41 42 48 50 60 61 76 77 78 79 80 81 82 83 95 96 97 98 99 100 101 102 114 115 116 117 118 119 120 121 133 134 135 136 137 138 139 140 152 153 154 155 156 157 171 172 173 174 175 176
+solid = 0 1 2 3 4 5 6 14 15 40 41 52 53 64 65 66 67 68 90 91 92 93 94 118 119 144 145 170 171 194 195 196 197 198 220 221 222 223 224 248 249 313 314 338 521 523 547
 npcs = 0 1 2 26 27 28 43 44 45
 
 [Mario_small]
@@ -23,9 +23,9 @@ jump_left = 217 60 16 16,217 60 16 16,217 60 16 16,217 60 16 16,217 60 16 16,217
 
 [pipes]
 
-pipe_up = 48 32 32 32
-pipe_left = 80 64 32 32
-pipe_right = 16 64 32 32
+pipe_up = 224 0 32 32
+pipe_left = 192 112 32 32
+pipe_right = 16 336 32 32
 ; Pipe locations: u/d/l/r, position of pipe, new screen location, new mario location. f.e u416 416 600 0 50 50
 ; position of map and screen location is relative to the map. The mario location is relative to the screen!
 pipe_locations = u416 416 4160 0 24 16,l4720 416 200 0 24 16
