--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -1,6 +1,7 @@
 [paths]
 
 circular_backround_path = .\Engine\Media\super_mario_world_circularBackground.csv
+bg_tiles_path = .\Engine\Media\super_mario_tiles.png
 action_layer_path = .\Engine\Media\super_mario_world_Main Layer.csv
 tiles_path = .\Engine\Media\super_mario_sprite_sheet.png
 solid_tiles_path = .\Engine\Media\solid_tiles.txt
@@ -9,7 +10,7 @@ npcs_path = .\Engine\Media\super_mario_sprite_sheet.png
 
 [tiles]
 
-solid = 0 1 2 3 4 5 6 14 15 40 41 52 53 64 65 66 67 68 90 91 92 93 94 118 119 144 145 170 171 194 195 196 197 198 220 221 222 223 224 248 249 313 314 338 521 523 547
+solid = 0 1 2 3 4 5 6 14 15 40 41 52 53 64 65 66 67 68 90 91 92 93 94 118 119 144 145 170 171 194 195 196 197 198 220 221 222 223 224 248 249 313 314 338 521 547
 npcs = 0 1 2 3 4 26 27 28 314 338
 
 [Mario_small]
