Working on enemies

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -6,6 +6,7 @@ action_layer_path = .\Engine\Media\super_mario_world_Main Layer.csv
 tiles_path = .\Engine\Media\super_mario_sprite_sheet.png
 solid_tiles_path = .\Engine\Media\solid_tiles.txt
 characters_path = .\Engine\Media\characters.png
+enemies_path = .\Engine\Media\enemies.png
 npcs_path = .\Engine\Media\super_mario_sprite_sheet.png
 
 [tiles]
@@ -33,17 +34,17 @@ pipe_locations = u416 416 4160 0 24 16,l4720 416 200 0 24 16
 
 [enemies]
 
-goomba = 272 16 16 16,288 16 16 16
-goomba_smashed = 304 16 16 10
-green_koopa_troopa_right = 320 10 16 22,336 10 16 22
-green_koopa_troopa_left = 320 10 16 22,336 10 16 22
-green_koopa_troopa_shell = 400 16 16 10
-red_koopa_troopa_right = 320 42 16 22,336 42 16 22
-red_koopa_troopa_left = 320 42 16 22,336 42 16 22
-red_koopa_troopa_shell = 400 48 16 10
+goomba = 0 0 16 20,30 0 16 20
+goomba_smashed = 60 5 16 12
+green_koopa_troopa_right = 210 0 16 22,240 0 16 22
+green_koopa_troopa_left = 150 0 16 22,180 0 16 22
+green_koopa_troopa_shell = 360 0 16 16
+red_koopa_troopa_right = 210 30 16 22,240 30 16 22
+red_koopa_troopa_left = 150 30 16 22,180 30 16 22
+red_koopa_troopa_shell = 360 30 16 16
 
 [emenies_positions]
 
-goomba = 500 400
-green_koopa_troopa = 700 400
-red_koopa_troopa = 360 362
+goomba = 500 350
+green_koopa_troopa = 700 350
+red_koopa_troopa = 360 361
