Fix major errors with koopas killing

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -46,5 +46,5 @@ red_koopa_troopa_shell = 360 30 16 16
 [emenies_positions]
 
 goomba = 500 350
-green_koopa_troopa = 700 350
+green_koopa_troopa = 700 350,520 350
 red_koopa_troopa = 360 362
