put start point on config

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -8,6 +8,7 @@ solid_tiles_path = .\Engine\Media\solid_tiles.txt
 characters_path = .\Engine\Media\characters.png
 enemies_path = .\Engine\Media\enemies.png
 npcs_path = .\Engine\Media\super_mario_sprite_sheet.png
+undergroundBG = .\Engine\Media\super_mario_world_UndergroundBack.csv
 
 [tiles]
 
@@ -48,3 +49,8 @@ red_koopa_troopa_shell = 360 30 16 16
 goomba = 500 350
 green_koopa_troopa = 700 350,520 350
 red_koopa_troopa = 360 362
+
+[potitions]
+
+start=60 430
+checkpoint= 
