--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -8,7 +8,7 @@ solid_tiles_path = .\Engine\Media\solid_tiles.txt
 characters_path = .\Engine\Media\characters.png
 enemies_path = .\Engine\Media\enemies.png
 npcs_path = .\Engine\Media\super_mario_sprite_sheet.png
-undergroundBG = .\Engine\Media\super_mario_world_UndergroundBack.csv
+underground_layer_path = .\Engine\Media\super_mario_world_UndergroundBack.csv
 
 [tiles]
 
