--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -44,6 +44,11 @@ red_koopa_troopa_right = 210 30 16 22,240 30 16 22
 red_koopa_troopa_left = 150 30 16 22,180 30 16 22
 red_koopa_troopa_shell = 360 30 16 16
 
+[blocks]
+
+brick=64 0 16 16
+block=0 0 16 16
+
 [emenies_positions]
 
 goomba = 500 350
@@ -54,3 +59,4 @@ red_koopa_troopa = 360 362
 
 start=60 430
 checkpoint= 
+
