Add piranha plant

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -43,12 +43,15 @@ green_koopa_troopa_shell = 360 0 16 16
 red_koopa_troopa_right = 210 30 16 22,240 30 16 22
 red_koopa_troopa_left = 150 30 16 22,180 30 16 22
 red_koopa_troopa_shell = 360 30 16 16
+piranha_plant= 389 29 16 24,419 29 16 24
 
 [emenies_positions]
 
 goomba = 500 350
 green_koopa_troopa = 700 350,520 350
 red_koopa_troopa = 360 362
+piranha_plant = 423 424
+
 
 [potitions]
 
