--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -57,7 +57,7 @@ goomba = 500 350
 green_koopa_troopa = 700 350,520 350
 red_koopa_troopa = 360 362
 piranha_plant = 423 416
-;piranha plant 'y' should be pixel precise so it cant start going up when mario in on top
+;piranha plant 'y' should be pixel precise so it cant start going up when mario in on top (2 tile pipe is y=416)
 
 
 [potitions]
