fixing error in menu

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -1,6 +1,7 @@
 [paths]
 
 circular_backround_path = .\Engine\Media\super_mario_world_circularBackground.csv
+menu_backround_path = .\Engine\Media\super_mario_world_MenuBackground.csv
 bg_tiles_path = .\Engine\Media\super_mario_tiles.png
 action_layer_path = .\Engine\Media\super_mario_world_Main Layer.csv
 tiles_path = .\Engine\Media\super_mario_sprite_sheet.png
