--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -70,6 +70,8 @@ brick=64 0 16 16
 block=0 0 16 16
 empty_block=96 0 16 16
 coin=0 16 16 16
+pole=32 304 16 16
+green_ball=32 288 16 16
 
 [emenies_positions]
 
@@ -81,9 +83,9 @@ piranha_plant = 423 416
 
 [powerups_positions]
 
-super = 800 400,300 400
+super = 800 400,820 400
 1up = 900 400
-star = 350 400
+star = 810 400
 
 [potitions]
 
