Add small falg at the end

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -74,6 +74,7 @@ empty_block=96 0 16 16
 coin=0 16 16 16
 pole=32 304 16 16
 green_ball=32 288 16 16
+small_flag=48 288 16 16
 
 [emenies_positions]
 
