Add parameters in config file

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -1,3 +1,18 @@
+[Game_Params]
+
+mario_max_speed = 4
+initial_player_lifes = 3
+invinsible_mario_duration = 30
+coins_to_get_life = 100
+koopa_troopa_stun_duration = 5
+enemy_speed = 1
+enemy_shell_speed = 3
+goomba_points = 100
+green_koopa_troopa_points = 100
+red_koopa_troopa_points = 100
+piranha_plant_points = 200
+powerups_points = 1000
+
 [paths]
 
 circular_backround_path = .\Engine\Media\super_mario_world_circularBackground.csv
