add coins as config param

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -12,6 +12,7 @@ green_koopa_troopa_points = 100
 red_koopa_troopa_points = 100
 piranha_plant_points = 200
 powerups_points = 1000
+coin_points = 200
 
 [paths]
 
