Removed powerups from beginning

--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -101,9 +101,12 @@ piranha_plant = 424 416,760 384,4424 400,4712 384,5688 400,6136 400,7000 384,746
 
 [powerups_positions]
 
-super = 300 400,820 400
-1up = 900 400
-star = 810 400
+super = 
+1up = 
+star = 
+;super = 300 400,820 400
+;1up = 900 400
+;star = 810 400
 
 
 [potitions]
