--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -16,16 +16,16 @@ coin_points = 200
 
 [paths]
 
-circular_backround_path = .\Engine\Media\super_mario_world_circularBackground.csv
-menu_backround_path = .\Engine\Media\super_mario_world_MenuBackground.csv
-bg_tiles_path = .\Engine\Media\super_mario_tiles.png
-action_layer_path = .\Engine\Media\super_mario_world_Main Layer.csv
-tiles_path = .\Engine\Media\super_mario_sprite_sheet.png
-solid_tiles_path = .\Engine\Media\solid_tiles.txt
-characters_path = .\Engine\Media\characters.png
-enemies_path = .\Engine\Media\enemies.png
-npcs_path = .\Engine\Media\super_mario_sprite_sheet.png
-underground_layer_path = .\Engine\Media\super_mario_world_UndergroundBack.csv
+circular_backround_path = .\Engine\Bin\super_mario_world_circularBackground.csv
+menu_backround_path = .\Engine\Bin\super_mario_world_MenuBackground.csv
+bg_tiles_path = .\Engine\Bin\super_mario_tiles.png
+action_layer_path = .\Engine\Bin\super_mario_world_Main Layer.csv
+tiles_path = .\Engine\Bin\super_mario_sprite_sheet.png
+solid_tiles_path = .\Engine\Bin\solid_tiles.txt
+characters_path = .\Engine\Bin\characters.png
+enemies_path = .\Engine\Bin\enemies.png
+npcs_path = .\Engine\Bin\super_mario_sprite_sheet.png
+underground_layer_path = .\Engine\Bin\super_mario_world_UndergroundBack.csv
 
 [tiles]
 
